--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 deepface==0.0.93
+tf-keras==2.18.0
 document==1.0
 langchain==0.3.14
 langchain_community==0.3.14
 langchain_core==0.3.29
 langchain_huggingface==0.1.2
-numpy==2.2.1
+numpy==1.26.4
 opencv_contrib_python==4.10.0.84
 opencv_python==4.10.0.84
 Pillow==11.1.0
 pydantic==2.10.5
 pytesseract==0.3.13
 sentence_transformers==3.1.1
+mediapipe==0.10.20
